resolve broken diaporama on ie8

--- a/andam.fr/wp-content/themes/andam/style.less
+++ b/andam.fr/wp-content/themes/andam/style.less
@@ -591,7 +591,7 @@ font-size: 1.5em;
 /*-------------- 20-years-of-fashion -------------*/
 #twenty-years-of-fashion article { clear:both;}
 
-#twenty-years-of-fashion #photos{ position:relative; float:left; width:100%; margin-bottom: @unit;}
+#twenty-years-of-fashion #photos{ position:relative; float:left; width:100%; margin-bottom: @unit; background-color: black;}
 
 #twenty-years-of-fashion img#hack {
 	position: relative;
@@ -599,7 +599,7 @@ font-size: 1.5em;
 	width: 100%;
 }
 
-#twenty-years-of-fashion nav#gallery {
+#twenty-years-of-fashion #gallery {
 	width: 100%;
 	float:left;
 	text-align: center;
@@ -608,27 +608,26 @@ font-size: 1.5em;
 	/*white-space: nowrap;*/
 }
 
-#twenty-years-of-fashion a#precedent, #twenty-years-of-fashion a#suivant, #twenty-years-of-fashion nav a#albumprecedent, #twenty-years-of-fashion nav a#albumsuivant {
-	font-size: @unit*2;
-	line-height: @unit/2.5;
+#twenty-years-of-fashion a#precedent, #twenty-years-of-fashion a#suivant, #twenty-years-of-fashion a#albumprecedent, #twenty-years-of-fashion a#albumsuivant {
+	font-size:(30/@font-size)*1em;
+	line-height: @line/30;
 	display:inline-block;
 	color: #ccc;
 	padding: 0 1%;
 }
 
-#twenty-years-of-fashion nav a#precedent:hover, #twenty-years-of-fashion nav a#suivant:hover, #twenty-years-of-fashion nav a#albumprecedent:hover, #twenty-years-of-fashion nav a#albumsuivant:hover {
-	font-size: @unit*2;
+#twenty-years-of-fashion a#precedent:hover, #twenty-years-of-fashion a#suivant:hover, #twenty-years-of-fashion a#albumprecedent:hover, #twenty-years-of-fashion a#albumsuivant:hover {
 	color: #1A1A1A;
 	text-decoration: none;
 }  
 
-#twenty-years-of-fashion nav#gallery figcaption {
+#twenty-years-of-fashion #gallery figcaption {
 	float: none;
 	display: inline;
 	padding: 0 1.5%;
 }
 
-#twenty-years-of-fashion #photos figure {
+#twenty-years-of-fashion #photos .pic {
 	width:auto;
 	height: auto;
 }
